# g-checker-for-itf

./: .gitignore  .prettierignore  LICENSE  README.md  asset-manifest.json  coins19.json  coins20.json  coins21.json  genJson.sh  genYml.sh  index.html  main.py  package-lock.json  package.json  sample.csv  setup.cfg
.github/workflows/: build-on-merge.yml  build-on-pr.yml  build.yml  release.yml  style-check.yml  test.yml
data/: coins19.json  mast20.json
data/reqYml/: coins20.yml
docs/: asset-manifest.json  index.html  manifest.json
docs/static/css/: main.24c45d09.css.map  main.3692fcce.css  main.3692fcce.css.map  main.39b1b140.css  main.39b1b140.css.map  main.5ac6936c.css  main.5ac6936c.css.map  main.67891b1c.css  main.67891b1c.css.map  main.94cd6c7d.css  main.94cd6c7d.css.map
docs/static/js/: 787.20cb2637.chunk.js.map  main.02d9aa0f.js  main.02d9aa0f.js.map  main.09f2c4ea.js  main.09f2c4ea.js.map  main.1ae60ea0.js  main.1ae60ea0.js.LICENSE.txt  main.1ae60ea0.js.map  main.20b15ab7.js  main.20b15ab7.js.map  main.2a9c8d56.js  main.2a9c8d56.js.map  main.2d2f0c18.js  main.2d2f0c18.js.map  main.2f03746c.js  main.2f03746c.js.map  main.3a57029d.js  main.3a57029d.js.map  main.3ef2734e.js  main.3ef2734e.js.map  main.3f07faba.js  main.3f07faba.js.map  main.60af81d5.js  main.60af81d5.js.map  main.6f3c2afb.js  main.6f3c2afb.js.map  main.726649c8.js  main.726649c8.js.map  main.73fa2e2b.js  main.73fa2e2b.js.map  main.7a32e646.js  main.7a32e646.js.map  main.7bb28db7.js  main.7bb28db7.js.map  main.85f4366e.js  main.85f4366e.js.map  main.87d260e8.js  main.87d260e8.js.map  main.8e49dc09.js  main.8e49dc09.js.map  (+20 more)
g_checker_for_itf/: ArgParser.py  Color.py  Dir.py  main.py
public/: index.html
py-cli/: setup.cfg
py-cli/g_checker_for_itf/: RecognizedFilter.py
react-visualizer/: package-lock.json  package.json
react-visualizer/docs/: asset-manifest.json  index.html
react-visualizer/src/: App.css  App.js
react-visualizer/src/checkGraduate/: checkGrad.ts
react-visualizer/src/reqJson/: cisIR20.json  coins19.json  coins20.json  coins21.json  coins23-24.json  coins23.json  klis21-knowledge.json  klis21-management.json  klis21-system.json  mast20.json
reqJson/: coins20.yml  mast20.yml
reqYml/: cisID20.yml  cisIR20.yml  coins19.yml  coins20.yml
script/: genJson.sh  sample.csv
src/: App.css  App.js  grade.json
src/checkGraduate/: checkGrad.ts  readCsv.ts
src/reqJson/: cis20.json  cis20.yml  cisID20.json  cisIR20.json  coins19.json  coins20.json  coins21.json  coins21.yml  mast20.json  math20.json  math20.yml  psych20.json  psych20.yml
static/css/: main.24c45d09.css
static/js/: main.39641b1d.js  main.39641b1d.js.map  main.e80bf227.js.map
tani/: package-lock.json  package.json
tani/src/: App.css  App.js  grade.json
(+2 files in other folders)
