[metadata]
name = g-checker-for-itf
version = attr: g_checker_for_itf.__init__.__version__
description = ITF の卒業要件を確認したい。
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = oshamashama
author_email = uwyiqmq@gmail.com
# classifiers =
#     Development Status :: 3 - Alpha
#     Programming Language :: Python :: 3.7
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9
#     Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >= 3
# python_requires = >= 3.7
# install_requires =

[options.entry_points]
console_scripts =
    gchk = g_checker_for_itf.main:main

[isort]
profile = black

[flake8]
# E501: line too long
ignore = E501
indent-size = 4

[mypy]
python_version = 3.9
pretty = True
strict = True
