[metadata]
name = g-checker-for-itf
version = attr: g_checker_for_itf.__init__.__version__
description = "A checker if your credits meet the graduation requirements or not (For Univ. Tsukuba students)"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = oshamashama
author_email = uwyiqmq@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >= 3.7

[options.extras_require]
dev =
    black>=22.1.0
    flake8>=4.0.1
    mypy>=0.931
    isort>=5.10.1

[options.entry_points]
console_scripts =
    gchk = g_checker_for_itf.main:main


[isort]
profile = black

[flake8]
# E501: line too long
ignore = E501
indent-size = 4

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
